manifests/base/applicationset-controller/hanzocd-applicationset-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: hanzocd-applicationset-controller
    app.kubernetes.io/part-of: hanzocd
    app.kubernetes.io/component: applicationset-controller
  name: hanzocd-applicationset-controller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hanzocd-applicationset-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hanzocd-applicationset-controller
    spec:
      containers:
        - args:
            - /usr/local/bin/hanzocd-applicationset-controller
          image: ghcr.io/hanzoai/deploy:latest
          imagePullPolicy: Always
          name: hanzocd-applicationset-controller
          ports:
            - containerPort: 7000
              name: webhook
            - containerPort: 8080
              name: metrics
          volumeMounts:
            - mountPath: /app/config/ssh
              name: ssh-known-hosts
            - mountPath: /app/config/tls
              name: tls-certs
            - mountPath: /app/config/gpg/source
              name: gpg-keys
            - mountPath: /app/config/gpg/keys
              name: gpg-keyring
            - mountPath: /tmp
              name: tmp
            - name: hanzocd-repo-server-tls
              mountPath: /app/config/reposerver/tls
            - name: hanzocd-repo-server-mtls
              mountPath: /app/config/reposerver/mtls
            - name: hanzocd-cmd-params-cm
              mountPath: /home/cd/params
          securityContext:
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
      serviceAccountName: hanzocd-applicationset-controller
      volumes:
        - configMap:
            name: hanzocd-ssh-known-hosts-cm
          name: ssh-known-hosts
        - configMap:
            name: hanzocd-tls-certs-cm
          name: tls-certs
        - configMap:
            name: hanzocd-gpg-keys-cm
          name: gpg-keys
        - emptyDir: { }
          name: gpg-keyring
        - emptyDir: { }
          name: tmp
        - name: hanzocd-repo-server-tls
          secret:
            secretName: hanzocd-repo-server-tls
            optional: true
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
              - key: ca.crt
                path: ca.crt
        - name: hanzocd-repo-server-mtls
          secret:
            secretName: hanzocd-repo-server-mtls
            optional: true
            items:
              - key: client.crt
                path: client.crt
              - key: client.key
                path: client.key
              - key: server-ca.crt
                path: server-ca.crt
        - name: hanzocd-cmd-params-cm
          configMap:
            optional: true
            name: hanzocd-cmd-params-cm
            items:
              - key: applicationsetcontroller.profile.enabled
                path: profiler.enabled
      nodeSelector:
        kubernetes.io/os: linux
