manifests/base/applicationset-controller/hanzocd-applicationset-controller-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: hanzocd-applicationset-controller
    app.kubernetes.io/part-of: hanzocd
    app.kubernetes.io/component: applicationset-controller
  name: hanzocd-applicationset-controller-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hanzocd-applicationset-controller
  ingress:
    - from:
        - namespaceSelector: { }
      ports:
        - protocol: TCP
          port: 7000
        - protocol: TCP
          port: 8080
  policyTypes:
  - Ingress
